[package]
name = "debug"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes", "std"] }
rustls = "0.19"
async-tls = "0.11"


log = "0.4"
simplelog = { version = "0.8", default-features = false }
